updates to html and css

--- a/testfile.html
+++ b/testfile.html
@@ -18,22 +18,28 @@
     </nav>
     <div id="socialfeed">
       <div class="postcard">
-        <div class="postimage"></div>
+        <div class="postimage">Image placeholder</div>
+        This is a placeholder for post text
       </div>
       <div class="postcard">
-        <div class="postimage"></div>
+        <div class="postimage">Image placeholder</div>
+        This is a placeholder for post text
       </div>
       <div class="postcard">
-        <div class="postimage"></div>
+        <div class="postimage">Image placeholder</div>
+        This is a placeholder for post text
       </div>
       <div class="postcard">
-        <div class="postimage"></div>
+        <div class="postimage">Image placeholder</div>
+        This is a placeholder for post text
       </div>
       <div class="postcard">
-        <div class="postimage"></div>
+        <div class="postimage">Image placeholder</div>
+        This is a placeholder for post text
       </div>
       <div class="postcard">
-        <div class="postimage"></div>
+        <div class="postimage">Image placeholder</div>
+        This is a placeholder for post text
       </div>
     </div>
     <footer>
